<resources>
    <string name="app_name">Arphat App</string>
    <string name="term_privacy">By signin up, you agree to our</string>

    <string name="logout">Logout?</string>
    <string name="app_id">2477345922497353</string>

    <string name="facebook_app_id">860180217714988</string>
    <string name="fb_login_protocol_scheme">fb860180217714988</string>

    <string name="twitter_consumer_key">SuuKiXE0T1YlFb44lz5HJhpkT</string>
    <string name="twitter_consumer_secret">tK4ixOku1eNz387E4eAVTFxX0OQXTFVzMJvwDp4HeYEno1YEJZ</string>

    <string name="username">Android Studio</string>
    <string name="user_email">android.studio@android.com</string>
    <string name="phone_number">-</string>
    <string name="address">-</string>

    <string name="office_name">Arphat Travel Agency</string>
    <string name="office_slogan">Solusi Untuk Setiap Perjalanan Anda</string>
    <string name="office_address">RT.4/RW.9, Kayu Putih, Kec. Pulo Gadung, Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta 13210</string>
    <string name="office_customerService">(021) 47883900</string>
    <string name="office_email">arphat_travel@gmail.com</string>

    <string name="booking_01">Booking Transportation</string>
    <string name="booking_02">Preview Booking</string>
    <string name="booking_cancle_validation">Are you sure you want to Cancle this Booking?</string>

    <string name="notes_booking_transaction">Maksimal konfirmasi penyewaan 30 menit dari sekarang. dari sekarang. Hubungi kami jika belum mendapatkan kabar lebih dari 30 menit.</string>

    <string name="mobil_merk">Merek Mobil</string>
    <string name="mobil_kapasitas">0-5 orang</string>
    <string name="mobil_mesin">1500cc</string>

    <string name="term_privacy_2">By click booking button, you agree to our</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyDtOS2mopjfCbk3bPfk3zlTbGkx3C9qGKA</string>

    <string name="permissions_text">Places Project needs permission to acces device location to provide required services. Please allow the permission</string>

    <string name="tab_1">Home</string>
    <string name="tab_2">History</string>
    <string name="tab_3">Payment</string>
    <string name="tab_4">Inbox</string>
    <string name="tab_5">Account</string>
    <string name="loading">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_asal">Email Pengirim</string>
    <string name="judul_inbox">Title</string>

</resources>
