<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:padding="20dp"
        android:scrollbars="none">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Bagian Foto User-->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImg"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_account_circle_skyblue"
                    android:layout_centerVertical="true"
                    android:layout_alignStart="@+id/imageView" />

                <!--Bagian Username dan Email-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="20dp">

                    <TextView
                        android:id="@+id/profileName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/nav_header_vertical_spacing"
                        android:textSize="20dp"
                        android:text="@string/username"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/profileEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_email" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="30dp"
                android:layout_marginHorizontal="10dp"
                android:padding="20dp"
                android:background="@drawable/shadow_box">

                <!--Username-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="Username"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/display_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/username"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

                <!--Email-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:id="@+id/display_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_email"
                        android:textSize="10dp"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

                <!--No Telp-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="Phone"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:id="@+id/display_phoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

                <!--Address-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="Address"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:id="@+id/display_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/signout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:text="Log Out" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>